Fixed spacing on signup block

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 100px;
+	gap: 50px;
 }
 
 .header .logo {
@@ -60,6 +61,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 5%;
 }
 
 ul {
@@ -158,10 +160,12 @@ button {
 	color: #F9FAF8;
 	justify-content: space-between;
 	align-items: center;
+	padding: 0px 10%;
+	gap: 20px;
 }
 
 .signup-txt {
-	padding: 10px 100px;
+	
 }
 
 .signup-title {
@@ -175,8 +179,7 @@ button {
 }
 
 .signup-button {
-	border: 2px solid white;
-	margin: 10px 100px;
+	border: 2px solid #F9FAF8;
 }
 
 .footer {
